# senscale

./: .gitattributes  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: release.yml  verify.yml
src/: cfg.rs  cfg_header.yaml  cli.rs  core.rs  main.rs  msg.rs  thread_id.rs  winutil.rs  wrap.rs
src/core/: cursor.rs  mod.rs
src/core/driver/: mod.rs  settings.rs  write.rs
src/core/hook/: mod.rs  state.rs
src/driver/: mod.rs  settings.rs
src/process/: id.rs  iter.rs  mod.rs  mouse.rs
src/windows/: mod.rs  process.rs  thread.rs  util.rs
