[package]
name = "senscale"
version = "0.1.0"
authors = ["reslario <reslario.code@gmail.com>"]
edition = "2018"

[dependencies]
winapi = { version = "0.3.9", features = ["winioctl", "ioapiset", "winuser", "tlhelp32", "processthreadsapi", "handleapi", "winbase", "minwindef"] }
toml = "0.5.8"
serde = { version = "1.0.126", features = ["derive"] }
directories = "3.0.2"
argh = "0.1.4"
once_cell = "1.7.2"
