[package]
name = "senscale"
version = "1.0.0"
authors = ["reslario <reslario.code@gmail.com>"]
edition = "2021"

[dependencies]
winapi = { version = "0.3.9", features = ["winioctl", "ioapiset", "winuser", "tlhelp32", "processthreadsapi", "handleapi", "winbase", "minwindef", "winnt"] }
serde_yaml = "0.8.24"
serde = { version = "1.0.137", features = ["derive"] }
directories = "4.0.1"
argh = "0.1.8"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
